kubernetes/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jig
  namespace: jig-workshop-worker
spec:
  selector:
    matchLabels:
      app: jig
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jig # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: jig
          imagePullPolicy: Always
          image: kenmoini/jig:06619c49cec4565bf7a78d303ca8c02c2eb68de4
          ports:
            - containerPort: 8080
              name: web
