kubernetes/06-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jig
  namespace: jig-workshop-worker
spec:
  selector:
    matchLabels:
      app: jig
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jig # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: jig
          imagePullPolicy: Always
          image: kenmoini/jig:e5b7fc8b8956efeb663cf55574af9890ebf11118
          ports:
            - containerPort: 8080
              name: web
          volumeMounts:
            - name: jig-env
              mountPath: "/var/www/data"
              readOnly: true
      volumes:
        # You set volumes at the Pod level, then mount them into containers inside that Pod
        - name: jig-env
          configMap:
            # Provide the name of the ConfigMap you want to mount.
            name: jig-env
            # An array of keys from the ConfigMap to create as files
            items:
              - key: ".env"
                path: ".env"
