kubernetes/07-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jig
  namespace: jig-workshop-worker
  labels:
    app: jig
spec:
  ports:
    - port: 8080
      name: web
  selector:
    app: jig
